# famil

./: .replit  bootstrap.py  main.py  pyproject.toml  requirements.txt  run_migration.py  schema.sql
.streamlit/: config.toml
config/: settings.json
pages/: 01_calendar.py  02_chores.py  03_grocery_list.py  04_events.py  04_school_events.py  05_meal_planner.py  06_todo_list.py  __init__.py  calendar.py  chores.py  events.py  grocery_list.py  home.py  mealplanner.py  schoolevents.py  settings.py  todolist.py
utils/: __init__.py  backup_manager.py  context.py  database.py  database_migration.py  error_diagnostics.py  error_recovery.py  features.py  header.py  helpers.py  init_database.py  logger.py  mobile.py  notifications.py  performance.py  settings_manager.py  styles.py  system_info.py  updates.py  websocket.py
